k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dify-plugin-packager-ui
spec:
  selector:
    app: dify-plugin-packager-ui
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
