k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dify-plugin-packager-ui
spec:
  ingressClassName: nginx
  rules:
    - host: dify-plugin-packager.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dify-plugin-packager-ui
                port:
                  number: 80
